# self-expand-agent-security-agent

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  sources.yaml  victim_profiles.yaml
docker/: Dockerfile.victim  docker-compose.yaml
src/: main.py
src/analyzer/: defense_planner.py  test_generator.py  threat_classifier.py
src/collector/: arxiv.py  base.py  cli_search.py  manager.py  rss.py  search.py  web.py
src/db/: models.py  result_store.py  threat_store.py
src/defender/: agent_roles.py  council_manager.py  implementer.py  integrity.py  layer_registry.py  metamorphic.py  optimizer.py  resilience.py  reviewer.py  self_learner.py  staging.py  variant_manager.py
src/defender/layers/: base.py  context_isolator.py  input_validator.py  output_filter.py  rate_limiter.py  tool_sandbox.py
src/sandbox/: docker_manager.py  seed_data.py  victim_agent.py
src/tester/: attack_runner.py  evaluator.py  report.py
src/utils/: claude_api.py  claude_code.py  logging.py
