[project]
name = "ai-threat-defense-agent"
version = "0.1.0"
description = "Self-expanding AI agent that collects threats, builds defenses, and tests them autonomously"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "anthropic>=0.40.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "feedparser>=6.0.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "docker>=7.0.0",
    "pyyaml>=6.0.0",
    "faker>=28.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
threat-defense = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
